// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn bPIsPe"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn hgyopi"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn gSQcDB"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-guXXQn zpfov"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dOeoAH eaXcSX"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn kaReGy"
      size="small"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn buGKbL"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn ibWRbU"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-guXXQn kgosOW"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dOeoAH eaXcSX"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button MD 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn hgyopi"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn hgyopi"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn gSQcDB"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn hgyopi"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn gSQcDB"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-guXXQn zpfov"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dOeoAH eaXcSX"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn hgyopi"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-guXXQn zpfov"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dOeoAH eaXcSX"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn gSQcDB"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn gSQcDB"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-guXXQn zpfov"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-dOeoAH eaXcSX"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn buGKbL"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn buGKbL"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn ibWRbU"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn buGKbL"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn ibWRbU"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-guXXQn kgosOW"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dOeoAH eaXcSX"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn buGKbL"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-guXXQn kgosOW"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dOeoAH eaXcSX"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn ibWRbU"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-lfVKn hvpGfk"
    >
      <div
        className="sc-izgCsI kCa-dCf"
      >
        <div
          className="sc-jTIXKS iGNJPG"
        >
          <button
            className="sc-guXXQn ibWRbU"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-dOeoAH eaXcSX"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-jTIXKS iGNJPG"
      >
        <button
          className="sc-guXXQn kgosOW"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-dOeoAH eaXcSX"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
